--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,1 +1,28 @@
+name: Run
 
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
+
+jobs:
+  run-bot:
+    runs-on: ubuntu-latest
+
+    concurrency:
+      group: bot-restart
+      cancel-in-progress: false
+
+    steps:
+      - name: Setup Actions
+        uses: actions/checkout@v3
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install GitHub CLI
+        run: sudo apt-get update && sudo apt-get install -y gh
+      - name: Run
+        run: python main.py
