--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -24,5 +24,7 @@ jobs:
 
       - name: Install GitHub CLI
         run: sudo apt-get update && sudo apt-get install -y gh
+        env:
+          LICHESS_TOKEN: ${{ secrets.LICHESS_TOKEN }}
       - name: Run
         run: python main.py
